# lending

./: .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  .releaserc  CODEOWNERS  README.md  crowdin.yml  pyproject.toml  setup.py
.github/helper/: install.sh  update_pot_file.sh
.github/workflows/: ci.yml  deploy.yml  generate-pot-file.yml  initiate_release.yml  linters.yml  on_release.yml  release_notes.yml
lending/: api.py  apis.py  hooks.py  install.py  modules.txt  patches.txt  utils.py
lending/fixtures/: role.json  workflow.json  workflow_action_master.json  workflow_state.json
lending/loan_management/: utils.py
lending/loan_management/controllers/: loan_controller.py
lending/loan_management/dashboard_chart_source/top_10_pledged_loan_securities/: top_10_pledged_loan_securities.py
lending/loan_management/doctype/bulk_repayment_log/: bulk_repayment_log.js  bulk_repayment_log.json  bulk_repayment_log.py  bulk_repayment_log_dashboard.py  test_bulk_repayment_log.py
lending/loan_management/doctype/co_lender_schedule/: co_lender_schedule.json
lending/loan_management/doctype/days_past_due_log/: days_past_due_log.json  (+1 more)
lending/locale/: ar.po  bs.po  cs.po  da.po  de.po  eo.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  main.pot  my.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sr_CS.po  sv.po  ta.po  th.po  tr.po  vi.po  zh.po
lending/overrides/: company.py  gl_entry.py  journal_entry.py  sales_invoice.py
lending/patches/v15_0/: loan_disbursement_status_patch.py  loan_repayment_schedule_status_patch.py  update_loan_product_accounts.py  update_loan_types.py  update_maturity_date.py
lending/patches/v16_0/: add_enable_loan_accounting_field.py  update_is_invoice_generated_field.py
lending/patches/v1_0/: add_enable_loan_accounting_field.py  add_index_for_custom_fields_for_JE.py  fix_invalid_loan_product_values.py  rename_is_accrued_to_demand_generated.py  update_value_date_in_loan_refund.py  update_value_date_in_loan_repayment.py  update_value_date_in_pending_doctypes.py
lending/public/js/: custom_customer.js  lending.bundle.js  loan_common.js
lending/tests/: test_utils.py
lending/workspace_sidebar/: lending.json
(+232 files in other folders)
